# incodoc

./: Cargo.toml  LICENSE  README.md  dev-notes  dev-notes.md  outp
src/: actions.rs  bin.rs  lib.rs  output.rs  parsing.rs  reference_doc.rs  tests.rs
src/actions/: absorb.rs  collect.rs  deemphasise.rs  mod.rs  prune.rs  query.rs  squash.rs  toc.rs
src/parse/: incodoc.pest
src/tests/: collect.rs  deemphasise.rs  mod.rs  parse.rs  prune.rs  query.rs  squash.rs  toc.rs
