[package]
name = "incodoc"
version = "0.3.0"
edition = "2024"
authors = ["Cody Bloemhard <codybloemhard@gmail.com>"]
description = "Incorporeal document format."
license = "MIT"
readme = "README.md"
repository = "https://github.com/codybloemhard/incodoc"
keywords = ["incorporeal", "document", "parser"]
categories = ["accessibility", "parser-implementations"]

[[bin]]
name = "testbin"
path = "src/bin.rs"

[dependencies]
pest = "2.7.15"
pest_derive = "2.7.15"
